--- a/news.html
+++ b/news.html
@@ -19,8 +19,8 @@
         <h1><a href="index.html"><img src="images/logo.svg" class="logo" alt="WCBカフェホーム"></a></h1>
         <nav>
             <ul class="main-nav">
-                <li><a href="news.html" target="_blank">News</a></li>
-                <li><a href="contact.html" target="_blank">Contact</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
