--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
             <img class="logo" src="images/logo.svg" alt="WBC カフェホーム"></a></h1>
             <nav>
                 <ul class="main-nav">
-                    <li><a class="news" href="news.html" target="_blank">News</a></li>
-                    <li><a class="menu" href="menu.html" target="_blank">Menu</a></li>
-                    <li><a class="contact" href="contact.html" target="_blank">Contact</a></li>
+                    <li><a class="news" href="news.html">News</a></li>
+                    <li><a class="menu" href="menu.html">Menu</a></li>
+                    <li><a class="contact" href="contact.html">Contact</a></li>
                 </ul>
             </nav>
     </header>
