--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                 <ul class="main-nav">
                     <li><a class="news" href="news.html">News</a></li>
                     <li><a class="menu" href="menu.html">Menu</a></li>
-                    <li><a class="contact" href="contact.html">Contact</a></li>
+                    <li><a class="contact" href="discover.html">Discover</a></li>
                 </ul>
             </nav>
     </header>
