--- a/news.html
+++ b/news.html
@@ -21,6 +21,7 @@
             <ul class="main-nav">
                 <li><a href="news.html">News</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a class="contact" href="discover.html">Discover</a></li>
             </ul>
         </nav>
     </header>
