--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 <ul class="main-nav">
                     <li><a class="news" href="news.html">News</a></li>
                     <li><a class="contact" href="contact.html">Contact</a></li>
+                    <li><a class="contact" href="discover.html">Discover</a></li>
+
                 </ul>
             </nav>
     </header>
