--- a/discover.html
+++ b/discover.html
@@ -245,7 +245,7 @@
         <div class="schools-grid">
             <div class="school">
                 <div class="video-container">
-                    <img src="images/discover01.jpeg" alt="Sunshine Academy Video">
+                    <a href="https://www.youtube.com/watch?v=UKOss-5Ag8w"><img src="images/discover01.jpeg" alt="Sunshine Academy Video"></a>
                 </div>
                 <div class="school-info">
                     <h2>Sunshine Academy</h2>
@@ -254,7 +254,8 @@
             </div>
             <div class="school">
                 <div class="video-container">
-                    <img src="images/discover02.jpeg" alt="Tech High Video">
+                  <a href="https://youtu.be/IKrxywvNzqw?si=ZcFo0v4pfTNoBj9y">
+                    <img src="images/discover02.jpeg" alt="Tech High Video"></a>
                 </div>
                 <div class="school-info">
                     <h2>Tech High</h2>
@@ -263,7 +264,7 @@
             </div>
             <div class="school">
                 <div class="video-container">
-                    <img src="images/discover03.jpeg" alt="Global Minds International School Video">
+                  <a href="https://youtu.be/wfk0d6l2Jgk?si=tHzKFqimj_Im-pp6"><img src="images/discover03.jpeg" alt="Global Minds International School Video"></a>
                 </div>
                 <div class="school-info">
                     <h2>Global Minds International</h2>
